--- a/7.0+CSS+Cascade/style.css
+++ b/7.0+CSS+Cascade/style.css
@@ -10,3 +10,12 @@ p {
   margin: 0;
   padding: 0;
 }
+.white-text {
+  color: white;
+}
+.inner-box {
+  background: red;
+}
+#outer-box {
+  background-color: purple;
+}
