--- a/8.4+Web+Design+Agency+Project/8.4 Web Design Agency Project/style.css
+++ b/8.4+Web+Design+Agency+Project/8.4 Web Design Agency Project/style.css
@@ -19,3 +19,43 @@ footer {
   color: midnightblue;
 }
 
+.card > img {
+  height: 200px;
+  float: left;
+  margin-right: 50px;
+}
+.card {
+  width: 45%;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
+span {
+  color: darkblue;
+}
+
+@media (max-width: 680px) {
+  .logo {
+    width: 100px;
+  }
+
+  h1 {
+    font-size: 3.5rem;
+    text-align: center;
+  }
+
+  .card {
+    width: 100%;
+
+    text-align: justify;
+  }
+  .card > img {
+    width: 100%;
+  }
+}
