--- a/Backend/4.1 EJS Tags/views/index.ejs
+++ b/Backend/4.1 EJS Tags/views/index.ejs
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>EJS Tags</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EJS Tags</title>
-</head>
+  <body>
+    <h1><%=title%></h1>
+    <p>Current second: <%= seconds %></p>
 
-<body>
-  <h1>
-    <!-- Tite goes here -->
-  </h1>
-  <p>Current second:
-    <!-- Current second goes here -->
-  </p>
-  if (seconds % 2===0) {
-  <ul>
-    <!-- List goes here if current second is even. -->
-    <!-- Otherwise it should display the following: -->
-    <!-- <p>No items to display</p> -->
-  </ul>
-  } else {
-  <p>No items to display</p>
-  }
-  <p>
-    <!-- HTML content goes here -->
-  </p>
+    <% if (seconds % 2===0) { for (let i =0; i < items.length; i++){ %>
+    <ul>
+      <li><%=items[i]%></li>
 
-  <!-- Footer goes here -->
-</body>
+      <!-- List goes here if current second is even. -->
+      <!-- Otherwise it should display the following: -->
+      <!-- <p>No items to display</p> -->
+    </ul>
+    <% } } else {%>
+    <p>No items to display</p>
+    <%}%>
+    <p>
+      <!-- HTML content goes here -->
+      <%- "<em>This is some em text</em>" %>
+    </p>
 
+    <!-- Footer goes here -->
+    <%- include("footer.ejs") %>
+  </body>
 </html>
